--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,11 @@ python = "^3.10"
 httpx = "^0.21.2"
 PyNaCl = "^1.4.0"
 base58 = "^2.1.1"
+construct = "^2.10.67"
 
 
+[tool.poetry.dev-dependencies]
+jedi = "^0.18.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
