--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,9 @@
 {
   "name": "docs",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gitbolt/solathon.git"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,8 +13,7 @@
   "dependencies": {
     "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "^3.0.15"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.7.0",
