--- a/docs/package.json
+++ b/docs/package.json
@@ -14,7 +14,8 @@
     "highlight.js": "^11.4.0",
     "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.3"
   },
   "devDependencies": {
     "eslint": "8.7.0",
