--- a/docs/package.json
+++ b/docs/package.json
@@ -11,11 +11,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "highlight.js": "^11.4.0",
     "next": "^12.0.8",
+    "prismjs": "^1.26.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.3"
+    "react-syntax-highlighter": "^15.4.5",
+    "sass": "^1.43.3",
+    "tailwindcss": "^3.0.18"
   },
   "devDependencies": {
     "eslint": "8.7.0",
