--- a/docs/package.json
+++ b/docs/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "docs",
+  "name": "solathon",
   "repository": {
     "type": "git",
     "url": "https://github.com/gitbolt/solathon.git"
   },
+  "description": "Documentation site for Solathon",
+  "author": "Gitbolt",
+  "license": "MIT",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next",
     "start": "next start",
-    "lint": "next lint"
+    "build": "next build"
   },
   "dependencies": {
-    "next": "^12.0.8",
-    "prismjs": "^1.26.0",
-    "react": "^17.0.2",
-    "react-dom": "17.0.2",
-    "react-syntax-highlighter": "^15.4.5",
+    "next": "^11.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^3.0.18",
     "sass": "^1.43.3",
-    "tailwindcss": "^3.0.18"
+    "nextra": "^1.1.0",
+    "nextra-theme-docs": "^1.2.2",
+    "react-syntax-highlighter": "^15.4.5"
   },
   "devDependencies": {
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "prettier": "^2.0.5"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
