--- a/docs/package.json
+++ b/docs/package.json
@@ -14,13 +14,12 @@
   },
   "dependencies": {
     "next": "^11.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "tailwindcss": "^3.0.18",
-    "sass": "^1.43.3",
     "nextra": "^1.1.0",
     "nextra-theme-docs": "^1.2.2",
-    "react-syntax-highlighter": "^15.4.5"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "sass": "^1.43.3",
+    "tailwindcss": "^3.0.18"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
