--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ httpx = "^0.21.2"
 PyNaCl = "^1.4.0"
 base58 = "^2.1.1"
 construct = "^2.10.67"
+pytest = "^7.0.1"
 
 
 [tool.poetry.dev-dependencies]
