--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -7,3 +7,8 @@ enabled = true
 [analyzers.meta]
 runtime_version = "3.x.x"
 max_line_length = 79
+
+test_patterns = [
+  "tests/**",
+  "test_*.py"
+]
