--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,13 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.6"
 httpx = "^0.22.0"
 PyNaCl = "^1.5.0"
 base58 = "^2.1.1"
 construct = "^2.10.67"
 pytest = "^7.0.1"
+typing-extensions = {version = "^4.1.1", python = "3.10"}
 
 
 [tool.poetry.dev-dependencies]
