--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "solathon"
-version = "1.0.5"
-description = "High performance, easy to use and feature-rich Solana SDK for Python."
+version = "1.0.7"
+description = "A high-performance, easy-to-use, and feature-rich Solana SDK for Python."
 license = "MIT"
 authors = ["GitBolt"]
 readme = "README.md"
@@ -13,22 +13,23 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
-PyNaCl = "^1.5.0"
+python = "^3.9"
 base58 = "^2.1.1"
 construct = "^2.10.67"
 typing-extensions = { version = "^4.1.1", python = "3.10" }
 qrcode = "^7.4.2"
-pillow = "^10.2.0"
 httpx = "^0.27.2"
+pynacl = "^1.5.0"
+pillow = "^11.0.0"
 
 [tool.poetry.dev-dependencies]
 jedi = "^0.18.1"
