--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-﻿# Install solathon dependencies
-anyio~=4.1
-base58 >=2.1.1,<3.0
-certifi >=2023.11.17,~=2023.11
-cffi~=1.16
-construct >=2.10.70,<3.0
-exceptiongroup~=1.2
-h11~=0.14
-httpcore >=1.0.2,<2.0
-httpx~=0.22
-idna~=3.6
-pycparser~=2.21
-PyNaCl~=1.5
-Pillow~=10.1
-sniffio~=1.3
-qrcode >=7.4.2,<8.0
+anyio==4.6.2.post1
+base58==2.1.1
+certifi==2024.8.30
+cffi==1.17.1
+construct==2.10.70
+exceptiongroup==1.2.2
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.27.2
+idna==3.10
+pillow==11.0.0
+pycparser==2.22
+pynacl==1.5.0
+pypng==0.20220715.0
+qrcode==7.4.2
+sniffio==1.3.1
+typing-extensions==4.12.2
